feat: ormconfig.js and procfile

--- a/package.json
+++ b/package.json
@@ -18,19 +18,28 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "yarn build && yarn typeorm migration:generate -n",
+    "migration:run": "yarn build && yarn typeorm migration:run",
+    "migration:show": "yarn build && yarn typeorm migration:show",
+    "migration:revert": "yarn build && yarn typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
+    "@nestjs/typeorm": "^8.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-helmet": "^5.3.2",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.37",
+    "url-parse": "^1.5.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
