--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-fastify": "^8.0.6",
+    "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "fastify-helmet": "^5.3.2",
+    "fastify-swagger": "^4.11.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
